--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/node_modules
+/cleverly-back/node_modules
 /cleverly-front/node_modules
 /.pnp
 .pnp.js
